moved plugin execution to other process